fixed index on mobile, nav bar looks weird on chrome

--- a/app/static/style/stylesheet.css
+++ b/app/static/style/stylesheet.css
@@ -8,6 +8,7 @@ html, body {
   padding: 0;
   margin: auto;
   overflow: auto;
+  height: 100vh;
   /*overflow-x: hidden;*/
 }   
 
